<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemperatureActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempconvertor"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_80" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/startnum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_30"
        />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_120" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_160" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_200" />

    <TextView
        android:id="@+id/activity_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_300"
        />

    <TextView
        android:id="@+id/service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/started"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_500"
        />


</RelativeLayout>